--- a/src/templates/game.html
+++ b/src/templates/game.html
@@ -1,6 +1,11 @@
 <div id="game" class="scene">
 	<div class="container">
 
+		<div class="info">
+			<p>Black pieces: <span class="black count">0</span></p>
+			<p>White pieces: <span class="white count">0</span></p>
+		</div>
+
 		<!-- 8x8 board -->
 		<div class="board">
 			<div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div>
@@ -13,5 +18,6 @@
 			<div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div>
 		</div>	<!-- /.board -->
 
+		<button class="new">New Game</button>
 	</div>
 </div>
