Added basic piece counting

--- a/assets/stylesheets/main.less
+++ b/assets/stylesheets/main.less
@@ -136,6 +136,10 @@ body { font-size: 62.5%; background: #000; }
 					}
 				}
 			}
+
+			.info {
+				p { display: inline-block; }
+			}
 		}
 
 	/************************************/
