--- a/src/templates/game.html
+++ b/src/templates/game.html
@@ -2,8 +2,8 @@
 	<div class="container">
 
 		<div class="info">
-			<p>Black pieces: <span class="black count">0</span></p>
-			<p>White pieces: <span class="white count">0</span></p>
+			<div class="black">Black <span class="black count">0</span></div>
+			<div class="white">White <span class="white count">0</span></div>
 		</div>
 
 		<!-- 8x8 board -->
