--- a/src/templates/title.html
+++ b/src/templates/title.html
@@ -1,7 +1,9 @@
 <div id="title" class="scene">
 	<div class="container">
-		<h1>RequireJS + CoffeeScript</h1>
+		<h1>2P Reversi</h1>
 
-		<div class="about button">About</button>
+		<div class="button" data-view="game">Play</div>
+		<div class="button" data-view="rules">Rules</div>
+		<div class="button" data-view="about">About</div>
 	</div>
 </div>
