--- a/assets/stylesheets/main.less
+++ b/assets/stylesheets/main.less
@@ -79,6 +79,11 @@
 	-moz-animation-timing-function: linear;
 }
 
+.border-box {
+	box-sizing: border-box; 
+	-moz-box-sizing: border-box;
+}
+
 @font-face {
     font-family: 'Bebas Neue';
     src: url('../fonts/BebasNeue-webfont.eot');
@@ -106,7 +111,7 @@ body { font-size: 62.5%; background: #000; }
 	h1 { text-transform: uppercase; font: normal 2.6em/1.5 @font-family; margin: 3%; }
 	h2 { text-transform: uppercase; font: normal 2em/1.5 @font-family; margin: 3%; }
 
-	.button { font: normal 1em/1.8 @font-family; width: 35%; cursor: pointer; border: 1px solid #000; display: inline-block; background: #fff; color: #000; text-align: center; text-decoration: none; text-transform: uppercase; margin: 3%; 
+	.button { font: normal 2em/1.4 @font-family; width: 35%; cursor: pointer; border: 5px solid #000; display: inline-block; background: #fff; color: #000; text-align: center; text-decoration: none; text-transform: uppercase; margin: 3%; box-shadow: 0 4px 9px rgba(0,0,0,0.8); .border-box;
 		&:active { color: red; }
 		&.small { width: 15%; font-size: 0.7em; line-height: 2; }
 		&.back { float: left; }
@@ -116,9 +121,9 @@ body { font-size: 62.5%; background: #000; }
 	p { margin: 0; }
 
 	.overlay { position: absolute; left: 0px; top: 0px; width: 100%; height: 100%; background: rgba(0,0,0,0.65); background: -webkit-radial-gradient(center, ellipse cover, rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%); 
-		.modal { background: #fff; color: #000; padding: 3%; border: 1px solid #000; position: absolute; width: 60%; z-index: 1;
-			h3 { margin: 0; font-size: 1.3em; font-weight: normal; }
-			.button { width: 35%; margin-top: 2%; margin-bottom: 0; }
+		.modal { background: #fff; color: #000; padding: 3%; border: 5px solid #000; position: absolute; width: 60%; z-index: 1; box-shadow: 0 4px 9px rgba(0,0,0,0.8); .border-box;
+			h3 { margin: 0; font-size: 2em; font-weight: normal; }
+			.button { width: 35%; margin-top: 2%; margin-bottom: 0; font-size: 1.5em; }
 		}
 	}
 
@@ -132,14 +137,14 @@ body { font-size: 62.5%; background: #000; }
 		p { font-size: 1.1em; padding: 1%; } 
 	}
 
-	#game { background: url('../images/escheresque_ste.png');
-			.board { width: 100%; height: 66%; background: #3fa757; border-bottom: 1px solid #000; border-right: 1px solid #000; box-shadow: 0 4px 9px rgba(0,0,0,0.8);
+	#game { background: url('../images/low_contrast_linen.png');
+			.board { width: 100%; height: 66%; background: url('../images/baize-background.png') #3fa757; border-bottom: 1px solid #000; border-right: 1px solid #000; box-shadow: 0 4px 9px rgba(0,0,0,0.8);
 				/* Board squares */
 				& > div { width: 12.5%; height: 12.5%; float:left; .border-box; border-top: 1px solid #000; border-left: 1px solid #000; -webkit-transition: background-color 1s; -webkit-perspective: 1000; perspective: 1000; /* Not sure if this should be here or not */
 					&.hint { background: rgba(200, 0, 0, 0.5); }
 
 					/* Pieces */
-					.piece { position: relative; width: 90%; height: 90%; margin: 5%; -webkit-transform-style: preserve-3d; transform-style: preserve-3d;
+					.piece { opacity: 0; position: relative; width: 90%; height: 90%; margin: 5%; -webkit-transform-style: preserve-3d; transform-style: preserve-3d;
 						.white, .black { position: absolute; top: 0; left: 0; width: 100%; height: 100%; box-shadow: 0 3px 5px rgba(0, 0, 0, 0.7); border-radius: 50%; display: block; .border-box; -webkit-backface-visibility: hidden; backface-visibility: hidden; }
 
 						.white { background: url('../images/white-piece-background.png') center center no-repeat; background-size: cover; border: 1px solid #000; z-index: 1; }
@@ -151,11 +156,12 @@ body { font-size: 62.5%; background: #000; }
 			}
 
 			.info { height: 33%; width: 100%;
-				div { display: inline-block; width: 47%; height: 50%; margin: 1%; .border-box; font-size: 2em; box-shadow: 0 4px 9px rgba(0,0,0,0.8);
-					&.black { background: #000; color: #fff; border: 5px solid white; }
-					&.white { background: #fff; color: #000; border: 5px solid black; }
+				.black, .white { display: inline-block; width: 47%; height: 50%; margin: 1%; .border-box; font-size: 2em; box-shadow: 0 4px 9px rgba(0,0,0,0.8);
 					span { display: block; line-height: 0.4; }
 				}
+				.black, .button { background: #000; color: #fff; border: 5px solid white; }
+				.white { background: #fff; color: #000; border: 5px solid black; }
+				.button { box-shadow: 0 4px 9px rgba(0,0,0,0.8); font-size: 2em; margin: 0; .border-box; }
 			}
 		}
 
@@ -187,6 +193,14 @@ body { font-size: 62.5%; background: #000; }
 			h2 { margin: 1%; padding-top: 0; }
 			p { font-size: 1em; padding: 1%; width: 44%;
 				&:last-child { width: 94%; }
+			}
+		}
+
+		#game {
+			.board { display: inline-block; }
+			.info { width: 33%; height: 100%; display: inline-block; vertical-align: top; 
+				.black, .white { width: 95%; height: 40%; margin: 0 0 5% 0; display: block; font-size: 3.2em; }
+				.button { width: 95%; height: 15%; display: block; line-height: 1.4; }
 			}
 		}
 	}
