--- a/src/templates/game.html
+++ b/src/templates/game.html
@@ -2,8 +2,9 @@
 	<div class="container">
 
 		<div class="info">
-			<div class="black">Black <span class="black count">0</span></div>
-			<div class="white">White <span class="white count">0</span></div>
+			<div class="black">Black <span class="count">0</span></div>
+			<div class="white">White <span class="count">0</span></div>
+			<div class="button quit">Quit</div>
 		</div>
 
 		<!-- 8x8 board -->
@@ -17,7 +18,5 @@
 			<div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div>
 			<div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div>
 		</div>	<!-- /.board -->
-
-		<button class="new">New Game</button>
 	</div>
 </div>
