--- a/src/templates/about.html
+++ b/src/templates/about.html
@@ -4,10 +4,10 @@
 
 		<h2>About</h2>
 
-		<p>Basic template for creating RequireJS + CoffeeScript projects.</p>
-
-		<p>Derived from <a href="http://shikaku.ganbarugames.com">Shikaku Madness</a>.</p>
-
-		<p><div class="button showModal">Show a dialog box</div></p>
+		<p>The objective of Reversi is to capture as many pieces as possible. <br>
+			Black starts, and must play in one of the four spaces at the center of the board. <br>
+			When the center is filled, players may start capturing other pieces.<br>
+			A piece is captured when it is between two other pieces of the opposite color. <br>
+			The game ends when both players can't move, or the board is full.</p>
 	</div>
 </div>
