--- a/src/templates/title.html
+++ b/src/templates/title.html
@@ -1,9 +1,11 @@
 <div id="title" class="scene">
 	<div class="container">
+
 		<h1>2P Reversi</h1>
 
 		<div class="button" data-view="game">Play</div>
-		<div class="button" data-view="rules">Rules</div>
 		<div class="button" data-view="about">About</div>
+
+		<p class="copyright">&copy;2013 Ganbaru Games</p>
 	</div>
 </div>
