CSS for portrait orientation

--- a/src/templates/game.html
+++ b/src/templates/game.html
@@ -4,7 +4,7 @@
 		<div class="info">
 			<div class="black">Black <span class="count">0</span></div>
 			<div class="white">White <span class="count">0</span></div>
-			<div class="button quit">Quit</div>
+			<div class="button quit"><span>Quit</span></div>
 		</div>
 
 		<!-- 8x8 board -->
