--- a/assets/stylesheets/main.less
+++ b/assets/stylesheets/main.less
@@ -121,20 +121,20 @@ body { font-size: 62.5%; background: #000; }
 	p { margin: 0; }
 
 	.overlay { position: absolute; left: 0px; top: 0px; width: 100%; height: 100%; background: rgba(0,0,0,0.65); background: -webkit-radial-gradient(center, ellipse cover, rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%); 
-		.modal { background: #fff; color: #000; padding: 3%; border: 5px solid #000; position: absolute; width: 60%; z-index: 1; box-shadow: 0 4px 9px rgba(0,0,0,0.8); .border-box;
+		.modal { background: #fff; color: #000; padding: 3%; border: 5px solid #000; position: absolute; width: 85%; z-index: 1; box-shadow: 0 4px 9px rgba(0,0,0,0.8); .border-box;
 			h3 { margin: 0; font-size: 2em; font-weight: normal; }
 			.button { width: 35%; margin-top: 2%; margin-bottom: 0; font-size: 1.5em; }
 		}
 	}
 
 	#title { background: url('../images/low_contrast_linen.png');
-		h1 { font-size: 4em; margin-top: 10%; padding: 1%; text-shadow: 0 4px 9px rgba(0,0,0,0.8); background: url('../images/baize-background.png') #3fa757; border: 10px solid black; box-shadow: 0 4px 9px rgba(0,0,0,0.8); .border-box; }
-		.copyright { margin-top: 40%; text-shadow: 0 4px 9px rgba(0,0,0,0.8); }
+		h1 { font-size: 4em; margin: 10% auto; width: 80%; padding: 1%; text-shadow: 0 4px 9px rgba(0,0,0,0.8); background: url('../images/baize-background.png') #3fa757; border: 10px solid black; box-shadow: 0 4px 9px rgba(0,0,0,0.8); .border-box; }
+		.copyright { margin-top: 55%%; text-shadow: 0 4px 9px rgba(0,0,0,0.8); }
 	}
 
 	#about { background: url('../images/low_contrast_linen.png');
-		h2 { clear: left; padding-top: 3%; text-shadow: 0 4px 9px rgba(0,0,0,0.8); }
-		p { font-size: 1.1em; padding: 1%; text-shadow: 0 4px 9px rgba(0,0,0,0.8); text-align: left; } 
+		h2 { clear: left; text-shadow: 0 4px 9px rgba(0,0,0,0.8); }
+		ul { font-size: 1.1em; text-shadow: 0 4px 9px rgba(0,0,0,0.8); text-align: left; margin: 0 2%; padding: 0 0 0 10%; list-style-type: circle; }
 	}
 
 	#game { background: url('../images/low_contrast_linen.png');
@@ -156,13 +156,15 @@ body { font-size: 62.5%; background: #000; }
 			}
 
 			.info { height: 33%; width: 100%;
-				.black, .white { display: inline-block; width: 47%; height: 50%; margin: 1%; .border-box; font-size: 2em; box-shadow: 0 4px 9px rgba(0,0,0,0.8); position: relative;
-					span { display: block; line-height: 0.4; }
+				.black, .white { width: 35%; height: 90%; margin: 2% 3% 0 0; display: inline-block; .border-box; font-size: 2em; box-shadow: 0 4px 9px rgba(0,0,0,0.8); position: relative;
+					span { display: block; line-height: 1; font-size: 2em; }
 					&.turn:before { content: '★'; font-size: 0.4em; position: absolute; margin: 15% 0 0 1%; color: gold; text-shadow: 0 0 5px #000;  }
 				}
 				.black, .button { background: #000; color: #fff; border: 5px solid white; }
 				.white { background: #fff; color: #000; border: 5px solid black; }
-				.button { box-shadow: 0 4px 9px rgba(0,0,0,0.8); font-size: 2em; margin: 0; .border-box; }
+				.button { width: 20%; height: 90%; vertical-align: top; margin: 2% 0% 0 0; box-shadow: 0 4px 9px rgba(0,0,0,0.8); font-size: 2em; .border-box; 
+					span { -webkit-transform: rotateZ(90deg); display: block; margin-top: 85%; }
+				}
 			}
 		}
 
@@ -183,7 +185,7 @@ body { font-size: 62.5%; background: #000; }
 		}
 
 		#title { 
-			h1 { font-size: 4em; line-height: 1; margin: 6% 0 0 0; }
+			h1 { font-size: 4em; line-height: 1; margin: 6% auto 0 auto; }
 			nav { 
 				button { width: 45%; margin: 2%; }
 			}
@@ -191,15 +193,20 @@ body { font-size: 62.5%; background: #000; }
 		}
 
 		#about {
-			h2 { margin: 1%; padding-top: 0; }
-			p { font-size: 1em; line-height: 2; padding: 1% 0 1% 10%; }
+			.button { position: relative; z-index: 1; }
+			h2 { position: relative; left: -8%; margin: 2% 0; clear: none; }
+			ul { clear: left; }
 		}
 
 		#game {
 			.board { display: inline-block; }
 			.info { width: 33%; height: 100%; display: inline-block; vertical-align: top; 
-				.black, .white { width: 95%; height: 40%; margin: 0 0 5% 0; display: block; font-size: 3.2em; }
-				.button { width: 95%; height: 15%; display: block; line-height: 1.4; }
+				.black, .white { width: 95%; height: 40%; margin: 0 0 5% 0; display: block; font-size: 3.2em; 
+					span { line-height: 0.4; font-size: inherit; }
+				}
+				.button { width: 95%; height: 15%; display: block; line-height: 1.4; 
+					span { display: inline; margin: 0; }
+				}
 			}
 		}
 	}
