--- a/src/templates/about.html
+++ b/src/templates/about.html
@@ -3,11 +3,14 @@
 		<div class="small back button">&larr; Title</div>
 
 		<h2>About</h2>
+		
+		<ul>
+			<li>The objective of Reversi is to capture as many pieces as possible.</li>
+			<li>Black starts, and must play in one of the four spaces at the center of the board.</li>
+			<li>When the center is filled, players may start capturing other pieces.</li>
+			<li>A piece is captured when it is between two other pieces of the opposite color.</li>
+			<li>The game ends when both players can't move, or the board is full.</li>
+		</ul>
 
-		<p>The objective of Reversi is to capture as many pieces as possible. <br>
-			Black starts, and must play in one of the four spaces at the center of the board. <br>
-			When the center is filled, players may start capturing other pieces.<br>
-			A piece is captured when it is between two other pieces of the opposite color. <br>
-			The game ends when both players can't move, or the board is full.</p>
 	</div>
 </div>
