Added scene to show Game Center matches

--- a/assets/stylesheets/main.less
+++ b/assets/stylesheets/main.less
@@ -129,12 +129,19 @@ body { font-size: 62.5%; background: #000; }
 
 	#title { 
 		h1 { font-size: 4em; margin: 10% auto; width: 80%; padding: 1%; text-shadow: 0 4px 9px rgba(0,0,0,0.8); background: url('../images/baize-background.png') #3fa757; border: 10px solid black; box-shadow: 0 4px 9px rgba(0,0,0,0.8); .border-box; }
+		.button { width: 50%; }
 		.copyright { margin-top: 55%%; text-shadow: 0 4px 9px rgba(0,0,0,0.8); }
+		.gamecenter { display: none; }
 	}
 
 	#about {
 		h2 { clear: left; text-shadow: 0 4px 9px rgba(0,0,0,0.8); }
 		ul { font-size: 1.1em; text-shadow: 0 4px 9px rgba(0,0,0,0.8); text-align: left; margin: 0 2%; padding: 0 0 0 10%; list-style-type: circle; }
+	}
+
+	#gamecenter {
+		.button.new { float: right; }
+		h2 { clear: both; text-shadow: 0 4px 9px rgba(0,0,0,0.8); }
 	}
 
 	#game { 
