--- a/src/templates/title.html
+++ b/src/templates/title.html
@@ -3,8 +3,9 @@
 
 		<h1>2P Reversi</h1>
 
-		<div class="button" data-view="game">Play</div>
-		<div class="button" data-view="about">About</div>
+		<div class="button gamecenter" data-view="gamecenter">2P Network</div>
+		<div class="button local" data-view="game">2P Local</div>
+		<div class="button about" data-view="about">About</div>
 
 		<p class="copyright">&copy;2013 Ganbaru Games</p>
 	</div>
