Continued to integrate Game Center via Cordova plugin

--- a/assets/stylesheets/main.less
+++ b/assets/stylesheets/main.less
@@ -141,7 +141,10 @@ body { font-size: 62.5%; background: #000; }
 
 	#gamecenter {
 		.button.new { float: right; }
-		h2 { clear: both; text-shadow: 0 4px 9px rgba(0,0,0,0.8); }
+		h2 { clear: both; text-shadow: 0 4px 9px rgba(0,0,0,0.8); margin-bottom: 0; }
+		ul {
+			li { margin: 0 0 3% 0; background: #fff; color: #000; border: 5px solid black; display: inline-block; width: 90%; box-shadow: 0 4px 9px rgba(0,0,0,0.8); font-size: 1em; .border-box; }
+		}
 	}
 
 	#game { 
